feat: implement cross-runtime LiveProbe debugger
Add the broker, MCP interface, runtime agents, safety audits, demos, and repeatable GCE deployment path needed for an end-to-end live debugging demonstration.

Co-authored-by: Cursor <cursoragent@cursor.com>